Closed Bug 1797957 Opened 3 years ago Closed 3 years ago

XML viewer: cannot collapse (sub)trees

Categories

(Core :: DOM: Core & HTML, defect, P2)

Firefox 106
Desktop
All
defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- wontfix
firefox107 --- verified
firefox108 --- verified

People

(Reporter: pufiad, Assigned: emilio)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:106.0) Gecko/20100101 Firefox/106.0

Steps to reproduce:

  1. Open an XML file in Firefox. The XML file is displayed in a tab with the message "This XML file does not appear to have any style information associated with it. The document tree is shown below."

  2. Click on a minus sign or tag to collapse a (sub)tree.

Actual results:

Nothing. The (sub)tree does not collapse. It did in previous versions.

Expected results:

The (sub)tree should collapse.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Assignee: nobody → emilio
Status: UNCONFIRMED → NEW
Component: Widget: Gtk → DOM: Core & HTML
Ever confirmed: true
Flags: needinfo?(emilio)
Regressed by: 1308080

Set release status flags based on info from the regressing bug 1308080

Flags: needinfo?(emilio)

That's the only place where we have a non-anonymous summary in an UA
widget, which the code didn't handle correctly (it assumed that if we
were in an UA widget we were in a details shadow tree).

I could try to write a test for this if you think it's worth it but we
don't have many existing tests (non-reftest) for the XML prettyprinter
that I can see...

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a318c353f36b Fix HTMLSummaryElement::GetDetails() for XML pretty print. r=smaug
Pushed by sstanca@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ae004964f8e fix lint failure in dom/base/test/browser_xml_toggle.js. CLOSED TREE
Severity: -- → S2
Priority: -- → P2
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox107 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9300817 [details]
Bug 1797957 - Fix HTMLSummaryElement::GetDetails() for XML pretty print. r=edgar,smaug

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Open https://www.w3schools.com/xml/note.xml, click note, ensure it collapses and expands
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very scoped patch + test.
  • String changes made/needed: none
  • Is Android affected?: Yes
Flags: needinfo?(emilio)
Attachment #9300817 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9300817 [details]
Bug 1797957 - Fix HTMLSummaryElement::GetDetails() for XML pretty print. r=edgar,smaug

Approved for 107.0b8.

Attachment #9300817 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Duplicate of this bug: 1798569

I can confirm the fix in Nightly v108.0a1 and Beta v107.0b8 on Windows 10, Mac OS 11.6 and Ubuntu 22.
The XML tree will expand and collapse correctly when clicking both the +/- or the tree's main tag.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
OS: Unspecified → All
Hardware: Unspecified → Desktop
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: