Bug 1797957 - Fix HTMLSummaryElement::GetDetails() for XML pretty print. r=smaug

That's the only place where we have a non-anonymous summary in an UA
widget, which the code didn't handle correctly (it assumed that if we
were in an UA widget we were in a details shadow tree).

I could try to write a test for this if you think it's worth it but we
don't have many existing tests (non-reftest) for the XML prettyprinter
that I can see...

Differential Revision: https://phabricator.services.mozilla.com/D160662